[package]
name = "raigeki"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
phnt = "0.1.2"
windows = { version = "0.61.3", features = ["Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_Security", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_System_Memory"] }

